NetworkPolicies/deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busyboxdeploy2
spec:
  selector:
    matchLabels:
      app: busybox2
  template:
    metadata:
      labels:
        app: busybox2
    spec:
      containers:
      - name: busybox
        image: busybox
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        command:
          - sleep
          - "3600"
---
apiVersion: v1
kind: Service
metadata:
  name: busybox-service2
spec:
  selector:
    app: busybox2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
